# matching-engine

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
cmake/: fetch_packages.cmake
core/: CMakeLists.txt  limit.cpp  log.cpp  match.cpp  matching_service.cpp  order.cpp  order_book.cpp
core/include/: cancel_order_request.h  limit.h  log.h  match.h  matching_service.h  order.h  order_book.h  place_order_request.h
engine/: CMakeLists.txt  engine.cpp  main.cpp  order_reader.cpp  redis_snapshot_store.cpp  trade_consumer.cpp
engine/include/: engine.h  order_reader.h  redis_snapshot_store.h  snapshot.h  trade_consumer.h
helper/: CMakeLists.txt  channel.cpp  string_helper.cpp
helper/include/: channel.h  string_helper.h
tests/: CMakeLists.txt
tests/core/: test_limit.cpp  test_order_book.cpp
